Move debug hud injection point (#56) (#57)
* Move debug hud injection point (#56)

* Move debug hud injection point

* Filter tags for diagnostic viewing

* Add held item to debug overlay

* Minor cleanup

* Cleanup windswept

* Estimate reflectance and occlusion based on block tags and names

* Misc cleanup

* Improve colorization of tags in diagnostics display

* Fix toggling blocked sound; show sound location rather than sound file location

* Resource finders; move tagging from datapack into asset space

* Minor cleanup

---------

Co-authored-by: OreCruncher <orecruncher@gmail.com>

* Trait merge w/biome configs

* Dump tags

* Expand pack scanning for mod config files

* Fix setting debug flags at startup

* Library xface cleanup

* Codec serializer

* Tag checks were not using tag library

* Have client tag scanning working for multiple namespaces within the mod

* Minimal particles could result in a value that the randomizer does not like

* Detailed logging of resource/tag processing routines

---------

Co-authored-by: OreCruncher <orecruncher@gmail.com>